# json_eval

./: .gitignore  CMakeLists.txt  README.md  main.cpp  parse.cpp  parse.h  typeValuePair.h  value.cpp
src/: JSON.cpp  JSON.h  execute.cpp  execute.h  expression.cpp  expression.h  main.cpp  parse.cpp  parseJSON.cpp  parseJSON.h  value.cpp  value.h
tests/: executeTest.cpp  parseExpressionTest.cpp  parseJSONTest.cpp  parseTest.cpp
tests/resources/: bigObject.json
tests/resources/escapedChar/: escapedQuoteInKey.json
tests/resources/parseJSON/array/: differentTypeItems.json  oneItem.json  simple.json
tests/resources/parseJSON/complex/: everything.json
tests/resources/parseJSON/escapedChar/: escapedInValue.json  escapedLastQuoteInKey.json
tests/resources/parseJSON/simple/: null.json  number.json  string.json
tests/resources/parseJSON/unformatted/: uglyStrings.json
